--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -172,13 +172,4 @@ section.section-article.bg-white#recent
 /= partial "partials/section-promos/careers", :locals => { :tagline => "Solve hard problems.<br> Live where you want. Help us transform healthcare for the better." }
 
 .strip.strip-ccms
-aside#ctaBottom.bg-gray-3.section-article.container-image--center.lozad data-background-image=bg_product_dark
-  .relative.has-blob
-    .relative.z-5
-      .row.align-center.group--sm
-        .columns.small-12.medium-10.large-10.text-center
-          h2.headline-3 HITRUST audit? No problem.
-      .button-group.menu.align-center
-        = partial "partials/snippets/button", :locals => { :label => "Learn more about HITRUST compliance", :url => "/cloud-compliance/", :button_classes => "button hollow-inverted", :data_track_group => "compliance", :item_id => "get-compliance-bottom" }
-        = partial "partials/snippets/button", :locals => { :label => "Get started with CCMS", :url => "/cloud-compliance-management-system/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :data_track_group => "compliance", :item_id => "get-ccms-bottom" }
-    .blob-color.blob-ccms.z-auto data-glow="false"
+= partial "partials/section-promos/product-ccms"
