--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -59,47 +59,44 @@ ruby:
                 a href="/webinars" title="See all webinars"
                     = inline_svg("icon-webinar", class: "icon-size--large")
                     h2.headline-5.spaced-out Datica Webinars
-        .row.align-center
-            .columns.small-12.large-10.group
-                #webinar-container.preview.container-gray-3.relative href="/webinars/#{p["slug"]}" title=("View webinar")
-                    #webinar-play.hide.z-10.relative
-                        - if p.has_key?("video_embed")
-                            .group
-                                = Kramdown::Document.new(data.site.videos[p.video_embed.id].custom_form).to_html
-                    // trailer will require multiple condition checks, not worth the trouble yet. 
-                    /- if p.has_key?("trailer_preview")
-                        / h2 = entry.trailer_preview.id
-                        = Kramdown::Document.new(data.site.videos[p.trailer_preview.id].custom_form).to_html
-                    /- else
-                    .preview-meta.z-10.relative
-                        h1.headline-3.nomargin = p["title"]
-                        p.lead = (p.has_key?("subhead") ? p.subhead : nil)
-                        .menu.simple.group
-                            li
-                                = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
-                                span = event_date_full
-                            - if p.has_key?("discovery_topic")
+        - if p.has_key?("trailer_preview")
+            #webinar-trailer.row.align-center.collapse
+                .columns.small-12.large-10.group
+                    h4.headline-6.spaced-out.faded.margin-bottom-small Webinar Preview
+                    = Kramdown::Document.new(data.site.videos[p.trailer_preview.id].custom_form).to_html    
+        - else
+            .row.align-center.collapse
+                .columns.small-12.large-10.group
+                    #webinar-container.preview.container-gray-3.relative href="/webinars/#{p["slug"]}" title=("View webinar")
+                        #webinar-play.hide.z-10.relative
+                            - if p.has_key?("video_embed")
+                                .group
+                                    = Kramdown::Document.new(data.site.videos[p.video_embed.id].custom_form).to_html
+                        .preview-meta.z-10.relative
+                            h1.headline-3.nomargin = p["title"]
+                            p.lead = (p.has_key?("subhead") ? p.subhead : nil)
+                            .menu.simple.group
                                 li
-                                    span.label.info.round = data.site.discover[p.discovery_topic.id].title
-                        - if p.has_key?("authors")
-                            aside#webinar-authors
-                                .subhead--spaced.faded.headline-6.group--sm Presented by
-                                - p["authors"].each do | author |
-                                    p
-                                        = partial("partials/snippets/person", :locals => { :p => author, :classes => "person-light" })
-                    #preview-register.show.show-for-large.absolute(style="bottom: 0; right: 0;")
-                        / .preview-cta.headline-5.spaced-out Register to watch
-                        = inline_svg("icon-video-play-circle", class: "preview-icon icon-size--xlarge svg-color--white")
-                            
-                    #webinar-bg.absolute.preview-bg.z-0.group.img-multiply.blur-2
-                        img.lozad.img-cover src="#{thumb}?w=250&fm=jpg&q=10" data-src="#{thumb}?w=840"
+                                    = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
+                                    span = event_date_full
+                                - if p.has_key?("discovery_topic")
+                                    li
+                                        span.label.info.round = data.site.discover[p.discovery_topic.id].title
+                            - if p.has_key?("authors")
+                                aside#webinar-authors
+                                    .subhead--spaced.faded.headline-6.group--sm Presented by
+                                    - p["authors"].each do | author |
+                                        p
+                                            = partial("partials/snippets/person", :locals => { :p => author, :classes => "person-light" })
+                        #preview-register.show.show-for-large.absolute(style="bottom: 0; right: 0;")
+                            / .preview-cta.headline-5.spaced-out Register to watch
+                            = inline_svg("icon-video-play-circle", class: "preview-icon icon-size--xlarge svg-color--white")
+                                
+                        #webinar-bg.absolute.preview-bg.z-0.group.img-multiply.blur-2
+                            img.lozad.img-cover src="#{thumb}?w=250&fm=jpg&q=10" data-src="#{thumb}?w=840"
     section#description.section-article--med
         .row.align-center
             .columns.small-12.large-6
-                /h4.headline-5
-                    /p = today.in_time_zone("Central Time (US & Canada)").strftime('%A, %B %-d, %Y, %l:%M %p')
-                    = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
-                    span = event_date_full
                 - if p.has_key?("lead")
                     .lead
                         = Kramdown::Document.new(p["lead"]).to_html
