Added some utility classes
inline-block, block. For Academy article use cases

--- a/source/assets/scss/modules/utility.scss
+++ b/source/assets/scss/modules/utility.scss
@@ -172,3 +172,9 @@ hr {
     border-radius: $global-radius;
     overflow: hidden;
 }
+.inline-block {
+    display: inline-block;
+}
+.display-block {
+    display: block;
+}
