--- a/source/contentful_templates/academy.html.slim
+++ b/source/contentful_templates/academy.html.slim
@@ -49,7 +49,7 @@ ruby:
 section.bg-gray-12
   = partial "partials/head/header", :locals => { :style => "dark" }
 section.bg-white.section-article
-  .row.align-spaced.group
+  .row.align-spaced.align-middle.group
     .columns.small-12.medium-large-8.xlarge-7
       a.faded.link--dark href="/academy/" title=("Explore the Datica Academy")
         = inline_svg("academy-logo", class: "logo-size--medium group--sm")
@@ -62,16 +62,30 @@ section.bg-white.section-article
           | &nbsp;
           = inline_svg("small/icon-tag", class: "icon-inline svg-color--gray-5")
           = partial "/partials/content/tags", :locals => p
-      /.strip-bright.strip-small
-    .columns.medium-large-4
+    .columns.small-12.medium-large-4.show-for-medium-large
+      - if p.has_key?("featured_image")
+        img.lozad.group src="#{loader_rect}?fit=thumb&w=320&h=240" data-srcset="#{post_featured_image}?fit=thumb&w=640&h=360&q=50&fm=jpg&fl=progressive 640w, #{post_featured_image}?fit=thumb&fm=jpg&fl=progressive&w=600&h=400&q=40 800w, #{post_featured_image}?w=800&fm=jpg&fl=progressive 1200w" /
+
   .row.align-spaced
-    .columns.small-12.medium-large-8.xlarge-7
+    aside.columns.small-12.medium-large-4.section--sidebar.medium-large-order-2.group--2x data-sticky-container="" 
+      .sticky data-options=("anchor: content;") data-sticky="" data-sticky-on="large" 
+        - if p.has_key?("related_guide")
+          .group--2x
+            = partial "partials/cards/card-report-simple", :locals => { :post => p.related_guide, :style => "none", :size => "small", :desc => true, :show_button => true }
+        - else
+          - sorted_guides = data.site.guides.to_a.sort_by{ |id, guides| guides['_meta']['created_at'] }.reverse!
+          - sorted_guides.take(1).each do | id, guide_entry |
+            .group--2x
+              = partial "partials/cards/card-report-simple", :locals => { :post => guide_entry, :style => "none", :size => "small", :desc => true, :show_button => true }
+        /.strip.strip-bright.strip-small.hide-for-medium
+        #toc-sidebar.article-toc.show-for-medium-large.group
+
+    .columns.small-12.medium-large-8.xlarge-7.medium-large-order-1
       article#content.group
         #toc-top.group.article-toc.hide-for-medium-large
         - if p.has_key?("lead")
           .lead
             = Kramdown::Document.new(p["lead"]).to_html
-
         #article-body.content-dynamic
           = Kramdown::Document.new(p["post"]).to_html
       = partial "/partials/snippets/share", :locals => { :p => p, :classes => "group" }
@@ -95,19 +109,6 @@ section.bg-white.section-article
       .column
         = partial "partials/snippets/button", :locals => { :label => "Datica Academy", :title => "Explore the Datica Academy", :url => "/academy/", :button_classes => "button hollow", :icon => "icon-book-fill", :icon_align => "left" }
 
-    aside.columns.small-12.medium-large-4.section--sidebar data-sticky-container="" 
-      .sticky data-options=("anchor: content;") data-sticky="" data-sticky-on="large" 
-        - if p.has_key?("featured_image")
-          img.lozad.group src="#{loader_rect}?fit=thumb&w=320&h=240" data-srcset="#{post_featured_image}?fit=thumb&w=640&h=360&q=50&fm=jpg&fl=progressive 640w, #{post_featured_image}?fit=thumb&fm=jpg&fl=progressive&w=600&h=400&q=40 800w, #{post_featured_image}?w=800&fm=jpg&fl=progressive 1200w" /
-        #toc-sidebar.article-toc.show-for-medium-large.group
-        - if p.has_key?("related_guide")
-          .group
-            = partial "partials/cards/card-report-simple", :locals => { :post => p.related_guide, :style => "none", :size => "small", :desc => true, :show_button => true }
-        - else
-          - sorted_guides = data.site.guides.to_a.sort_by{ |id, guides| guides['_meta']['created_at'] }.reverse!
-          - sorted_guides.take(1).each do | id, guide_entry |
-            .group
-              = partial "partials/cards/card-report-simple", :locals => { :post => guide_entry, :style => "none", :size => "small", :desc => true, :show_button => true }
 
 = partial "partials/snippets/json-ld-article"
 <script type="text/javascript" defer src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?autorun=true&skin=desert"></script>
