--- a/source/partials/cards/_card-report-simple.slim
+++ b/source/partials/cards/_card-report-simple.slim
@@ -59,14 +59,15 @@ ruby:
 
 div(class="#{style_classes} #{fit_classes}")
     - if defined?(desc) && desc == true
-        - unless image_url == nil
-            a href=related_post_path title=link_title
-                img.lozad.group--sm src="#{loader_square}" data-src="#{image_url}?fit=thumb&w=240&h=240" alt="preview" width="180"
         .subheader-small
             = card_subhead
         h3.headline-4
             a class=link_style href=related_post_path title=link_title
                 = post.title
+        - unless image_url == nil
+            a href=related_post_path title=link_title
+                img.lozad.float-left.icon-size--xlarge src="#{loader_square}" data-src="#{image_url}?fit=thumb&w=180&h=180" alt="preview"
+
         p.text-small = post.summary
         - if defined?(show_button) && show_button == true
             = partial "partials/snippets/button", :locals => { :label => link_title_short, :url => related_post_path, :button_classes => "button success", :icon => "icon-chevron-right", :icon_align => "right" }
