Added AWS partner logo in global footer.

--- a/source/partials/snippets/_footer.slim
+++ b/source/partials/snippets/_footer.slim
@@ -40,4 +40,6 @@ footer.section-article.container-color--gray-gradient.main-footer role="contenti
         img.logo-cloud--item.logo-size--medium.lozad alt=("AICPA/SOC2 badge") data-src="https://images.ctfassets.net/189dvqdsjh46/1db5oL4HFeKkSGGcCmQACW/4b650496f1136e1d76f0d88547f8e428/AICPA_SOC_2_badge.svg" height="58" width="58" /
         img.logo-cloud--item.logo-size--medium.lozad data-src="https://images.ctfassets.net/189dvqdsjh46/2VnE1VKgSI0CigIaimYymm/8661955dacafd96c3c565bb5d1503dc8/coalfire-badge.png" /
         img.logo-cloud--item.logo-size--medium.lozad alt=("Cloud native computing foundation") data-src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/7dc0a16f892c1950cb743bb3f54f1ad6/cncf-logo-horizontal-alt.svg" height="48" width="157" /
+    .column.shrink
+      img.lozad.logo-size--xlarge src=loader_square data-src="https://images.ctfassets.net/189dvqdsjh46/yYSl0Yi3YWOsHOsExZPr6/69291bb4cdb86ed13aa5832480413c00/aws-partner-healthcare-card.png?w=280"
 .strip-bright
