Added new AWS logos to CPaaS, CCMS svg art replacement.

--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -65,7 +65,7 @@ ruby:
   the_form = data.site.forms['1sd7ExrRIkg0SgQ0CsiiaO']
   bg_image = 'https://images.ctfassets.net/189dvqdsjh46/3FCC7CKhlkP2bzFf8UzNk6/651f57bfbd77c0d38a7b188776ac4230/bg-hexagons-1.svg'
   img_1 = 'https://images.ctfassets.net/189dvqdsjh46/41KHEMRsg8CeGiO2cSawU8/1d95703cc95b4ca18660e95a105f1345/ccms--compliance-checks.jpg'
-  img_2 = 'https://images.ctfassets.net/189dvqdsjh46/6nxnpKEZvq4lSAN6u3l0Bf/4e0c45d4ae390fe95a682de8ba792c35/ccms-diagram_bleed_bottom.svg'
+  img_2 = 'https://images.ctfassets.net/189dvqdsjh46/1KxUwvIiuE4gEaeqUSIgq4/96c8067fac37815ed00f0e5931b6abae/ccms-diagram_bleed_bottom.png'
   diagram_1 = "https://images.ctfassets.net/189dvqdsjh46/1DnnFdmBAYcWSyiGE2M6aK/1651ceeb1d2343007b09a5ce4c20ed38/c3-diagram-1.png"
   diagram_2 = "https://images.ctfassets.net/189dvqdsjh46/iEhDz8im4wyCMCGk0Wcqk/79088104bd888bcb3e9867fb0ccb242a/c3-diagram-2.png"
   current_page.data.asset_preload = '<link href="' + bg_image + '" rel="preload" as="image" />'
