Academy masthead changes.

--- a/source/academy/index.html.erb
+++ b/source/academy/index.html.erb
@@ -15,7 +15,7 @@ current_page.data.date = today.strftime('%B %-d, %Y')
 promo1 = "https://images.ctfassets.net/189dvqdsjh46/6KsyCUFBSMsOW6UW2IUW4U/b2fc82592dd23d3c78bfa0a47126608c/cta-ccms-survey-ad-4x3.png"
 %>
 <%= partial "partials/head/header", :locals => { :style => "dark" } %>
-<section class="section-article bg-gray-12">
+<section class="section-article bg-white">
     <div class="row align-center">
         <div class="columns small-12 medium-10 large-8 text-center group">
             <h1 class="headline-2">
@@ -25,7 +25,13 @@ promo1 = "https://images.ctfassets.net/189dvqdsjh46/6KsyCUFBSMsOW6UW2IUW4U/b2fc8
             <%#
             <p class="group">Start with the basics, like why Protected Health Information (PHI) is central to HIPAA, then work your way towards advanced topics like FHIR and HL7.</p>
             %>
-            <h2 class="headline-4 spaced-out">Datica Guides</h2>
+        </div>
+    </div>
+</section>
+<section class="section-article bg-gray-11">
+    <div class="row align-center">
+        <div class="columns small-12 medium-10 large-8 text-center group">
+                <h2 class="headline-4 spaced-out">Datica Guides</h2>
             <p class="">Authoritative Guides Written By Industry Experts</p>
         </div>
     </div>
